<resources>
    <string name="app_name">Gradle MB Meetup demo</string>
    <string name="greeting_hello">Hello!</string>
    <string name="greeting_description">Mobile Broadcast Meetup Grodno Demo Application</string>
    <string name="greeting_button_next_title">Next</string>
    <string name="profile_button_title_friends">Friends</string>
    <string name="profile_button_title_news">News</string>
    <string name="profile_button_title_cart">Cart</string>
    <string name="profile_about_me">About me</string>
    <string name="profile_news_toast">On news pressed</string>
    <string name="profile_cart_toast">On cart pressed</string>
    <string name="friends_friend_click_toast">On %s clicked!</string>
    <string name="profile_user_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>